"""Tests for text entities."""

from unittest.mock import AsyncMock, patch

import pytest
from pytest_homeassistant_custom_component.common import (
    MockConfigEntry,
    snapshot_platform,
)
from syrupy.assertion import SnapshotAssertion

from custom_components.vogels_motion_mount_next_ble.coordinator import (
    VogelsMotionMountNextBleCoordinator,
)
from custom_components.vogels_motion_mount_next_ble.data import VogelsMotionMountPresetData
from custom_components.vogels_motion_mount_next_ble.text import NameText, PresetNameText
from homeassistant.const import Platform
from homeassistant.core import HomeAssistant
from homeassistant.helpers import entity_registry as er

from .conftest import setup_integration  # noqa: TID251

# -------------------------------
# region Setup
# -------------------------------


async def test_all_entities(
    hass: HomeAssistant,
    snapshot: SnapshotAssertion,
    mock_config_entry: MockConfigEntry,
    entity_registry: er.EntityRegistry,
) -> None:
    """Test all entities."""
    with patch("custom_components.vogels_motion_mount_next_ble.PLATFORMS", [Platform.TEXT]):
        await setup_integration(hass, mock_config_entry)

    await snapshot_platform(hass, entity_registry, snapshot, mock_config_entry.entry_id)


# -------------------------------
# region Actions
# -------------------------------


@pytest.mark.asyncio
async def test_name_text_set_value(mock_coord: VogelsMotionMountNextBleCoordinator):
    """Test setting name."""
    mock_coord.set_name = AsyncMock()
    mock_coord.data.name = "Old Name"

    entity = NameText(mock_coord)

    # native_value reflects coordinator
    assert entity.native_value == "Old Name"

    # Set a new name
    await entity.async_set_value("New Name")
    mock_coord.set_name.assert_awaited_once_with("New Name")


@pytest.mark.asyncio
async def test_preset_name_text_set_value_existing_data(
    mock_coord: VogelsMotionMountNextBleCoordinator,
):
    """Test setting preset name."""
    preset = mock_coord.data.presets[0]
    preset.data = VogelsMotionMountPresetData(
        name="Preset 1", distance=100, rotation=20
    )
    mock_coord.set_preset = AsyncMock()

    entity = PresetNameText(mock_coord, 0)

    # native_value reflects current preset name
    assert entity.native_value == "Preset 1"

    # Update name → should pass updated preset to coordinator
    await entity.async_set_value("New Preset Name")
    called_preset = mock_coord.set_preset.await_args[0][0]
    assert called_preset.data.name == "New Preset Name"


@pytest.mark.asyncio
async def test_preset_name_text_set_value_no_existing_data(
    mock_coord: VogelsMotionMountNextBleCoordinator,
):
    """Test setting preset name."""
    preset = mock_coord.data.presets[1]
    preset.data = None
    mock_coord.set_preset = AsyncMock()

    entity = PresetNameText(mock_coord, 1)

    # native_value should be None if no data exists
    assert entity.native_value is None

