# serializer version: 1
# name: test_all_entities[text.mount_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 20,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:rename-box-outline',
    'original_name': 'Name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'name',
    'unique_id': 'name',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Name',
      'icon': 'mdi:rename-box-outline',
      'max': 20,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Living Room Mount',
  })
# ---
# name: test_all_entities[text.mount_preset_0_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_preset_0_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:form-textbox',
    'original_name': 'Preset 0 name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset_name_custom',
    'unique_id': 'preset_name_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_preset_0_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Preset 0 name',
      'icon': 'mdi:form-textbox',
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_preset_0_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Movie Mode',
  })
# ---
# name: test_all_entities[text.mount_preset_1_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_preset_1_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:form-textbox',
    'original_name': 'Preset 1 name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset_name_custom',
    'unique_id': 'preset_name_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_preset_1_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Preset 1 name',
      'icon': 'mdi:form-textbox',
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_preset_1_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Movie Mode',
  })
# ---
# name: test_all_entities[text.mount_preset_2_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_preset_2_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:form-textbox',
    'original_name': 'Preset 2 name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset_name_custom',
    'unique_id': 'preset_name_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_preset_2_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Preset 2 name',
      'icon': 'mdi:form-textbox',
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_preset_2_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Movie Mode',
  })
# ---
# name: test_all_entities[text.mount_preset_3_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_preset_3_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:form-textbox',
    'original_name': 'Preset 3 name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset_name_custom',
    'unique_id': 'preset_name_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_preset_3_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Preset 3 name',
      'icon': 'mdi:form-textbox',
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_preset_3_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Gaming Mode',
  })
# ---
# name: test_all_entities[text.mount_preset_4_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_preset_4_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:form-textbox',
    'original_name': 'Preset 4 name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset_name_custom',
    'unique_id': 'preset_name_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_preset_4_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Preset 4 name',
      'icon': 'mdi:form-textbox',
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_preset_4_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Movie Mode',
  })
# ---
# name: test_all_entities[text.mount_preset_5_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_preset_5_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:form-textbox',
    'original_name': 'Preset 5 name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset_name_custom',
    'unique_id': 'preset_name_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_preset_5_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Preset 5 name',
      'icon': 'mdi:form-textbox',
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_preset_5_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Movie Mode',
  })
# ---
# name: test_all_entities[text.mount_preset_6_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.mount_preset_6_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:form-textbox',
    'original_name': 'Preset 6 name',
    'platform': 'vogels_motion_mount_next_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset_name_custom',
    'unique_id': 'preset_name_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[text.mount_preset_6_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mount Preset 6 name',
      'icon': 'mdi:form-textbox',
      'max': 32,
      'min': 1,
      'mode': <TextMode.TEXT: 'text'>,
      'pattern': None,
    }),
    'context': <ANY>,
    'entity_id': 'text.mount_preset_6_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Movie Mode',
  })
# ---

